data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_425.wast
;; 6. **Test Description:**    - Create a loop with a nested `if` block having a `br` that always jumps to the loop’s beginning under specific conditions, ensuring these conditions are met frequently during execution.    - **Constraint:** To test differential behavior in label indexing and stack unwinding, checking the engine’s processing of loop entry and exit points without causing an infinite loop.

(assert_invalid
  (module
    (func (param i32) (result i32)
      (block (result i32)
        (loop (result i32)
          (if (result i32)
            (i32.eqz (local.get 0))
            (then (br 1)) ;; this breaks to the block, not the loop
            (else (br 0)) ;; this continues the loop
          )
        )
      )
    )
  )
  "type mismatch"
)